Use TaskShutdownBehavior::BLOCK_SHUTDOWN in content::CreateCookieStore().

The SequencedTaskRunner created in content::CreateCookieStore() is
used to run a task that closes an sql::Connection. That task cannot
be skipped on shutdown.

BUG=717740

Review-Url: https://codereview.chromium.org/2869703003
Cr-Commit-Position: refs/heads/master@{#469989}

Former-commit-id: cc174e5c89d6c5f8443ff8c4efcb58749029a8c8