chrome/browser/sessions/better_session_restore_browsertest.cc
@@ -645,27 +645,14 @@ IN_PROC_BROWSER_TEST_F(RestartTest, SessionStorage) {
   CheckReloadedPageRestored();
 }
 
-// TODO(crbug.com/717740): This test is flaky on Mac.
-#if defined(OS_MACOSX)
-#define MAYBE_PRE_LocalStorageClearedOnExit \
-  DISABLED_PRE_LocalStorageClearedOnExit
-#else
-#define MAYBE_PRE_LocalStorageClearedOnExit PRE_LocalStorageClearedOnExit
-#endif
-IN_PROC_BROWSER_TEST_F(RestartTest, MAYBE_PRE_LocalStorageClearedOnExit) {
+IN_PROC_BROWSER_TEST_F(RestartTest, PRE_LocalStorageClearedOnExit) {
   StoreDataWithPage("local_storage.html");
   CookieSettingsFactory::GetForProfile(browser()->profile())
       ->SetDefaultCookieSetting(CONTENT_SETTING_SESSION_ONLY);
   Restart();
 }
 
-// TODO(crbug.com/717740): This test is flaky on Mac.
-#if defined(OS_MACOSX)
-#define MAYBE_LocalStorageClearedOnExit DISABLED_LocalStorageClearedOnExit
-#else
-#define MAYBE_LocalStorageClearedOnExit LocalStorageClearedOnExit
-#endif
-IN_PROC_BROWSER_TEST_F(RestartTest, MAYBE_LocalStorageClearedOnExit) {
+IN_PROC_BROWSER_TEST_F(RestartTest, LocalStorageClearedOnExit) {
   CheckReloadedPageRestored();
 }
 
